--- a/README.org
+++ b/README.org
@@ -84,15 +84,15 @@ There are two ways to load a theme. Both assume the theme is installed and avail
 Whenever you reconfigure a package, make sure to wrap your config in an
 `after!' block, otherwise Doom's defaults may override your settings. E.g.
 
-  (after! PACKAGE
-    (setq x y))
+(after! PACKAGE
+(setq x y))
 
 The exceptions to this rule:
 
-  - Setting file/directory variables (like `org-directory')
-  - Setting variables which explicitly tell you to set them before their
-    package is loaded (see 'C-h v VARIABLE' to look up their documentation).
-  - Setting doom variables (which start with 'doom-' or '+').
+- Setting file/directory variables (like `org-directory')
+- Setting variables which explicitly tell you to set them before their
+  package is loaded (see 'C-h v VARIABLE' to look up their documentation).
+- Setting doom variables (which start with 'doom-' or '+').
 
 Here are some additional functions/macros that will help you configure Doom.
 
@@ -119,16 +119,16 @@ they are implemented.
 (setq org-directory "~/Documents/org/org/")
 
 (use-package! websocket
-    :after org-roam)
+  :after org-roam)
 
 (use-package! org-roam-ui
-    :after org-roam
-    :hook (after-init . org-roam-ui-mode)
-    :config
-    (setq org-roam-ui-sync-theme t
-          org-roam-ui-follow t
-          org-roam-ui-update-on-save t
-          org-roam-ui-open-on-start t))
+  :after org-roam
+  :hook (after-init . org-roam-ui-mode)
+  :config
+  (setq org-roam-ui-sync-theme t
+        org-roam-ui-follow t
+        org-roam-ui-update-on-save t
+        org-roam-ui-open-on-start t))
 
 (setq org-roam-graph-executable "dot")
 #+end_src
@@ -198,21 +198,21 @@ unpin! pinned-package another-pinned-package)
 :PROPERTIES:
 :header-args: :tangle init.el
 :END:
- init.el -*- lexical-binding: t; -*-
+init.el -*- lexical-binding: t; -*-
 
 This file controls what Doom modules are enabled and what order they load
 in. Remember to run 'doom sync' after modifying it!
 
 NOTE Press 'SPC h d h' (or 'C-h d h' for non-vim users) to access Doom's
-     documentation. There you'll find a link to Doom's Module Index where all
-     of our modules are listed, including what flags they support.
+documentation. There you'll find a link to Doom's Module Index where all
+of our modules are listed, including what flags they support.
 
 NOTE Move your cursor over a module's name (or its flags) and press 'K' (or
-     'C-c c k' for non-vim users) to view its documentation. This works on
-     flags as well (those symbols that start with a plus).
+'C-c c k' for non-vim users) to view its documentation. This works on
+flags as well (those symbols that start with a plus).
 
-     Alternatively, press 'gd' (or 'C-c c d') on a module to browse its
-     directory (for easy access to its source code).
+Alternatively, press 'gd' (or 'C-c c d') on a module to browse its
+directory (for easy access to its source code).
 
 ** input and completion
 
@@ -248,17 +248,17 @@ window-select     ; visually switch windows
 zen               ; distraction-free coding or writing
 
 #+begin_src elisp
-       :ui
-       doom              ; what makes DOOM look the way it does
-       doom-dashboard    ; a nifty splash screen for Emacs
-       doom-quit         ; DOOM quit-message prompts when you quit Emacs
-       hl-todo           ; highlight TODO/FIXME/NOTE/DEPRECATED/HACK/REVIEW
-       modeline          ; snazzy, Atom-inspired modeline, plus API
-       ophints           ; highlight the region an operation acts on
-       (popup +defaults)   ; tame sudden yet inevitable temporary windows
-       vc-gutter         ; vcs diff in the fringe
-       vi-tilde-fringe   ; fringe tildes to mark beyond EOB
-       workspaces        ; tab emulation, persistence & separate workspaces
+:ui
+doom              ; what makes DOOM look the way it does
+doom-dashboard    ; a nifty splash screen for Emacs
+doom-quit         ; DOOM quit-message prompts when you quit Emacs
+hl-todo           ; highlight TODO/FIXME/NOTE/DEPRECATED/HACK/REVIEW
+modeline          ; snazzy, Atom-inspired modeline, plus API
+ophints           ; highlight the region an operation acts on
+(popup +defaults)   ; tame sudden yet inevitable temporary windows
+vc-gutter         ; vcs diff in the fringe
+vi-tilde-fringe   ; fringe tildes to mark beyond EOB
+workspaces        ; tab emulation, persistence & separate workspaces
 #+end_src
 
 ** editor
@@ -275,11 +275,11 @@ word-wrap         ; soft wrapping with language-aware indent
 
 
 #+begin_src elisp
-       :editor
+:editor
 
-       file-templates    ; auto-snippets for empty files
-       fold              ; (nigh) universal code folding
-       snippets          ; my elves. They type so I don't have to
+file-templates    ; auto-snippets for empty files
+fold              ; (nigh) universal code folding
+snippets          ; my elves. They type so I don't have to
 
 #+end_src
 
@@ -294,21 +294,21 @@ word-wrap         ; soft wrapping with language-aware indent
 
 
 #+begin_src elisp
-       :emacs
-       dired             ; making dired pretty [functional]
-       electric          ; smarter, keyword-based electric-indent
-       undo              ; persistent, smarter undo for your inevitable mistakes
-       vc                ; version-control and Emacs, sitting in a tree
-       :term
+:emacs
+dired             ; making dired pretty [functional]
+electric          ; smarter, keyword-based electric-indent
+undo              ; persistent, smarter undo for your inevitable mistakes
+vc                ; version-control and Emacs, sitting in a tree
+:term
 #+end_src
 
 ** checkers
 
 #+begin_src elisp
-       :checkers
-       syntax              ; tasing you for every semicolon you forget
-       (spell +flyspell) ; tasing you for misspelling mispelling
-       grammar           ; tasing grammar mistake every you make
+:checkers
+syntax              ; tasing you for every semicolon you forget
+(spell +flyspell) ; tasing you for misspelling mispelling
+grammar           ; tasing grammar mistake every you make
 #+end_src
 
 ** tools
@@ -332,10 +332,10 @@ tmux              ; an API for interacting with tmux
 upload            ; map local to remote projects via ssh/ftp
 
 #+begin_src elisp
-       :tools
-       (eval +overlay)     ; run code, run (also, repls)
-       lookup              ; navigate your code and its documentation
-       magit             ; a git porcelain for Emacs
+:tools
+(eval +overlay)     ; run code, run (also, repls)
+lookup              ; navigate your code and its documentation
+magit             ; a git porcelain for Emacs
 #+end_src
 
 ** os and lang
@@ -354,66 +354,66 @@ upload            ; map local to remote projects via ssh/ftp
   dhall
   elixir            ; erlang done right
   elm               ; care for a cup of TEA?
-  ;;erlang            ; an elegant language for a more civilized age
-  ;;ess               ; emacs speaks statistics
-  ;;factor
-  ;;faust             ; dsp, but you get to keep your soul
-  ;;fsharp            ; ML stands for Microsoft's Language
-  ;;fstar             ; (dependent) types and (monadic) effects and Z3
-  ;;gdscript          ; the language you waited for
-  ;;(go +lsp)         ; the hipster dialect
-  ;;(haskell +lsp)    ; a language that's lazier than I am
-  ;;hy                ; readability of scheme w/ speed of python
-  ;;idris             ; a language you can depend on
-  ;;json              ; At least it ain't XML
-  ;;(java +lsp)       ; the poster child for carpal tunnel syndrome
-  ;;javascript        ; all(hope(abandon(ye(who(enter(here))))))
-  ;;julia             ; a better, faster MATLAB
-  ;;kotlin            ; a better, slicker Java(Script)
-  ;;latex             ; writing papers in Emacs has never been so fun
-  ;;lean              ; for folks with too much to prove
-  ;;ledger            ; be audit you can be
-  ;;lua               ; one-based indices? one-based indices
-  ;;nim               ; python + lisp at the speed of c
-  ;;nix               ; I hereby declare "nix geht mehr!"
-  ;;ocaml             ; an objective camel
-  ;;php               ; perl's insecure younger brother
-  ;;plantuml          ; diagrams for confusing people more
-  ;;purescript        ; javascript, but functional
-  ;;python            ; beautiful is better than ugly
-  ;;qt                ; the 'cutest' gui framework ever
-  ;;racket            ; a DSL for DSLs
-  ;;raku              ; the artist formerly known as perl6
-  ;;rest              ; Emacs as a REST client
-  ;;rst               ; ReST in peace
-  ;;(ruby +rails)     ; 1.step {|i| p "Ruby is #{i.even? ? 'love' : 'life'}"}
-  ;;rust              ; Fe2O3.unwrap().unwrap().unwrap().unwrap()
-  ;;scala             ; java, but good
-  ;;(scheme +guile)   ; a fully conniving family of lisps
-  ;;sml
-  ;;solidity          ; do you need a blockchain? No.
-  ;;swift             ; who asked for emoji variables?
-  ;;terra             ; Earth and Moon in alignment for performance.
-  ;;web               ; the tubes
-  ;;yaml              ; JSON, but readable
-  ;;zig               ; C, but simpler
+  erlang            ; an elegant language for a more civilized age
+  ess               ; emacs speaks statistics
+  factor
+  faust             ; dsp, but you get to keep your soul
+  fsharp            ; ML stands for Microsoft's Language
+  fstar             ; (dependent) types and (monadic) effects and Z3
+  gdscript          ; the language you waited for
+  (go +lsp)         ; the hipster dialect
+  (haskell +lsp)    ; a language that's lazier than I am
+  hy                ; readability of scheme w/ speed of python
+  idris             ; a language you can depend on
+  json              ; At least it ain't XML
+  (java +lsp)       ; the poster child for carpal tunnel syndrome
+  javascript        ; all(hope(abandon(ye(who(enter(here))))))
+  julia             ; a better, faster MATLAB
+  kotlin            ; a better, slicker Java(Script)
+  latex             ; writing papers in Emacs has never been so fun
+  lean              ; for folks with too much to prove
+  ledger            ; be audit you can be
+  lua               ; one-based indices? one-based indices
+  nim               ; python + lisp at the speed of c
+  nix               ; I hereby declare "nix geht mehr!"
+  ocaml             ; an objective camel
+  php               ; perl's insecure younger brother
+  plantuml          ; diagrams for confusing people more
+  purescript        ; javascript, but functional
+  python            ; beautiful is better than ugly
+  qt                ; the 'cutest' gui framework ever
+  racket            ; a DSL for DSLs
+  raku              ; the artist formerly known as perl6
+  rest              ; Emacs as a REST client
+  rst               ; ReST in peace
+  (ruby +rails)     ; 1.step {|i| p "Ruby is #{i.even? ? 'love' : 'life'}"}
+  rust              ; Fe2O3.unwrap().unwrap().unwrap().unwrap()
+  scala             ; java, but good
+  (scheme +guile)   ; a fully conniving family of lisps
+  sml
+  solidity          ; do you need a blockchain? No.
+  swift             ; who asked for emoji variables?
+  terra             ; Earth and Moon in alignment for performance.
+  web               ; the tubes
+  yaml              ; JSON, but readable
+  zig               ; C, but simpler
 
 #+begin_src elisp
-       :os
-       (:if IS-MAC macos)  ; improve compatibility with macOS
-       tty               ; improve the terminal Emacs experience
+:os
+(:if IS-MAC macos)  ; improve compatibility with macOS
+tty               ; improve the terminal Emacs experience
 
-       :lang
-       emacs-lisp        ; drown in parentheses
-       fortran           ; in FORTRAN, GOD is REAL (unless declared INTEGER)
-       markdown          ; writing docs for people to ignore
-       org               ; organize your plain life in plain text
-       sh                ; she sells {ba,z,fi}sh shells on the C xor
+:lang
+emacs-lisp        ; drown in parentheses
+fortran           ; in FORTRAN, GOD is REAL (unless declared INTEGER)
+markdown          ; writing docs for people to ignore
+org               ; organize your plain life in plain text
+sh                ; she sells {ba,z,fi}sh shells on the C xor
 #+end_src
 
 ** email, app and config
 - email
-  (mu4e +org +gmail)
+
   notmuch
   (wanderlust +gmail)
 - app
@@ -427,10 +427,11 @@ upload            ; map local to remote projects via ssh/ftp
   literate
 
 #+begin_src elisp
-       :email
+:email
+(mu4e +org +gmail)
 
-       :app
+:app
 
-       :config
-       (default +bindings +smartparens))
+:config
+(default +bindings +smartparens))
 #+end_src
