* README.html: Test

--- a/README.org
+++ b/README.org
@@ -1,4 +1,5 @@
 #+TITLE: Doom Config
+#+OPTIONS: \n:t
 #+DATE:    March 18, 2022
 #+SINCE:   <replace with next tagged release version>
 #+STARTUP: inlineimages nofold
@@ -13,6 +14,8 @@
   - [[#add-more-packages][add more packages]]
     - [[#org-mode-setting][org mode setting]]
     - [[#magit-settings][magit settings]]
+    - [[#email-setup][email setup]]
+    - [[#inline-images][inline images]]
 - [[#packagesel][packages.el]]
 - [[#initel][init.el]]
   - [[#input-and-completion][input and completion]]
@@ -136,10 +139,36 @@ they are implemented.
 *** magit settings
 
 #+begin_src elisp
-(use-package! magit
-  :ensure t)
+(use-package! magit)
+;;(use-package! emacs-everywhere)
 #+end_src
 
+*** email setup
+#+begin_src elisp
+(set-email-account!                                                                   "gmail"
+ '((user-full-name         . "Love Grover")
+   (mu4e-sent-folder       . "/[Gmail]/Sent Mail")
+   (mu4e-trash-folder      . "/[Gmail]/Bin")
+   (smtpmail-smtp-user     . "ph17047@iisermohali.ac.in")
+   (user-mail-address      . "ph17047@iisermohali.ac.in")
+   ;;(smtpmail-smtp-user     . "")
+   (smtpmail-local-domain  . "gmail.com")
+   (smtpmail-default-smtp-server . "smtp.gmail.com")
+   (smtpmail-smtp-server . "smtp.gmail.com")
+   (smtpmail-smtp-service . 587))
+ t)
+
+(setq org-msg-options "html-postamble:nil H:5 num:nil ^:{} toc:nil author:nil email:nil \\n:t"
+      org-msg-startup "hidestars indent inlineimages"
+      +org-msg-accent-color "#A020F0"
+      org-msg-greeting-fmt "\nश्रीमन्%s,\n\n"
+      org-msg-signature "\n\n#+begin_signature\nशुभम् भवतु, \\\\\nलव ग्रोवर, \\\\\nपीएचडी-भौतिकशास्त्रम् \\\\\nभारतीय विज्ञान शिक्षा और अनुसन्धान संस्थान- मोहाली, पञ्जाब, भारत\n#+end_signature")
+#+end_src
+
+*** inline images
+#+begin_src elisp
+(setq org-startup-with-inline-images t)
+#+end_src
 * packages.el
 :PROPERTIES:
 :header-args: :tangle packages.el
@@ -244,7 +273,7 @@ neotree           ; a project drawer, like NERDTree for vim
 tabs              ; a tab bar for Emacs
 treemacs          ; a project drawer, like neotree but cooler
 unicode           ; extended unicode support for various languages
-window-select     ; visually switch windows
+
 zen               ; distraction-free coding or writing
 
 #+begin_src elisp
@@ -259,6 +288,7 @@ ophints           ; highlight the region an operation acts on
 vc-gutter         ; vcs diff in the fringe
 vi-tilde-fringe   ; fringe tildes to mark beyond EOB
 workspaces        ; tab emulation, persistence & separate workspaces
+window-select     ; visually switch windows
 #+end_src
 
 ** editor
@@ -313,19 +343,15 @@ grammar           ; tasing grammar mistake every you make
 
 ** tools
 ansible
-biblio            ; Writes a PhD for you (citation needed)
+
 debugger          ; FIXME stepping through code, to help you add bugs
 direnv
-docker
-editorconfig      ; let someone else argue about tabs vs spaces
-ein               ; tame Jupyter notebooks with emacs
+docker3
 gist              ; interacting with github gists
 lsp               ; M-x vscode
 make              ; run make tasks from Emacs
 pass              ; password manager for nerds
-pdf               ; pdf enhancements
 prodigy           ; FIXME managing external services & code builders
-rgb               ; creating color strings
 taskrunner        ; taskrunner for all your projects
 terraform         ; infrastructure as code
 tmux              ; an API for interacting with tmux
@@ -336,6 +362,11 @@ upload            ; map local to remote projects via ssh/ftp
 (eval +overlay)     ; run code, run (also, repls)
 lookup              ; navigate your code and its documentation
 magit             ; a git porcelain for Emacs
+biblio            ; Writes a PhD for you (citation needed)
+pdf               ; pdf enhancements
+rgb               ; creating color strings
+editorconfig      ; let someone else argue about tabs vs spaces
+ein               ; tame Jupyter notebooks with emacs
 #+end_src
 
 ** os and lang
@@ -380,7 +411,6 @@ magit             ; a git porcelain for Emacs
   php               ; perl's insecure younger brother
   plantuml          ; diagrams for confusing people more
   purescript        ; javascript, but functional
-  python            ; beautiful is better than ugly
   qt                ; the 'cutest' gui framework ever
   racket            ; a DSL for DSLs
   raku              ; the artist formerly known as perl6
@@ -409,6 +439,7 @@ fortran           ; in FORTRAN, GOD is REAL (unless declared INTEGER)
 markdown          ; writing docs for people to ignore
 org               ; organize your plain life in plain text
 sh                ; she sells {ba,z,fi}sh shells on the C xor
+python            ; beautiful is better than ugly
 #+end_src
 
 ** email, app and config
@@ -418,8 +449,6 @@ sh                ; she sells {ba,z,fi}sh shells on the C xor
   (wanderlust +gmail)
 - app
   calendar
-  emms
-  everywhere        ; *leave* Emacs!? You must be joking
   irc               ; how neckbeards socialize
   (rss +org)        ; emacs as an RSS reader
   twitter           ; twitter client https://twitter.com/vnought
@@ -431,6 +460,9 @@ sh                ; she sells {ba,z,fi}sh shells on the C xor
 (mu4e +org +gmail)
 
 :app
+calendar
+emms
+everywhere        ; *leave* Emacs!? You must be joking
 
 :config
 (default +bindings +smartparens))
