--- a/README.org
+++ b/README.org
@@ -293,15 +293,15 @@ window-select     ; visually switch windows
 
 ** editor
 
-(evil +everywhere); come to the dark side, we have cookies
-(format +onsave)  ; automated prettiness
-god               ; run Emacs commands without modifier keys
-lispy             ; vim for lisp, for people who don't like vim
-multiple-cursors  ; editing in many places at once
-objed             ; text object editing for the innocent
-parinfer          ; turn lisp into python, sort of
-rotate-text       ; cycle region at point between text candidates
-word-wrap         ; soft wrapping with language-aware indent
+(evil +everywhere); come to the dark side, we have cookies\\
+(format +onsave)  ; automated prettiness\\
+god               ; run Emacs commands without modifier keys\\
+lispy             ; vim for lisp, for people who don't like vim\\
+multiple-cursors  ; editing in many places at once\\
+objed             ; text object editing for the innocent\\
+parinfer          ; turn lisp into python, sort of\\
+rotate-text       ; cycle region at point between text candidates\\
+word-wrap         ; soft wrapping with language-aware indent\\
 
 
 #+begin_src elisp
@@ -371,62 +371,61 @@ ein               ; tame Jupyter notebooks with emacs
 
 ** os and lang
 
-- lang
-  agda              ; types of types of types of types...
-  beancount         ; mind the GAAP
-  (cc +lsp)        ; C > C++ == 1
-  clojure           ; java with a lisp
-  common-lisp       ; if you've seen one lisp, you've seen them all
-  coq               ; proofs-as-programs
-  crystal           ; ruby at the speed of c
-  csharp            ; unity, .NET, and mono shenanigans
-  data              ; config/data formats
-  (dart +flutter)   ; paint ui and not much else
-  dhall
-  elixir            ; erlang done right
-  elm               ; care for a cup of TEA?
-  erlang            ; an elegant language for a more civilized age
-  ess               ; emacs speaks statistics
-  factor
-  faust             ; dsp, but you get to keep your soul
-  fsharp            ; ML stands for Microsoft's Language
-  fstar             ; (dependent) types and (monadic) effects and Z3
-  gdscript          ; the language you waited for
-  (go +lsp)         ; the hipster dialect
-  (haskell +lsp)    ; a language that's lazier than I am
-  hy                ; readability of scheme w/ speed of python
-  idris             ; a language you can depend on
-  json              ; At least it ain't XML
-  (java +lsp)       ; the poster child for carpal tunnel syndrome
-  javascript        ; all(hope(abandon(ye(who(enter(here))))))
-  julia             ; a better, faster MATLAB
-  kotlin            ; a better, slicker Java(Script)
-  latex             ; writing papers in Emacs has never been so fun
-  lean              ; for folks with too much to prove
-  ledger            ; be audit you can be
-  lua               ; one-based indices? one-based indices
-  nim               ; python + lisp at the speed of c
-  nix               ; I hereby declare "nix geht mehr!"
-  ocaml             ; an objective camel
-  php               ; perl's insecure younger brother
-  plantuml          ; diagrams for confusing people more
-  purescript        ; javascript, but functional
-  qt                ; the 'cutest' gui framework ever
-  racket            ; a DSL for DSLs
-  raku              ; the artist formerly known as perl6
-  rest              ; Emacs as a REST client
-  rst               ; ReST in peace
-  (ruby +rails)     ; 1.step {|i| p "Ruby is #{i.even? ? 'love' : 'life'}"}
-  rust              ; Fe2O3.unwrap().unwrap().unwrap().unwrap()
-  scala             ; java, but good
-  (scheme +guile)   ; a fully conniving family of lisps
-  sml
-  solidity          ; do you need a blockchain? No.
-  swift             ; who asked for emoji variables?
-  terra             ; Earth and Moon in alignment for performance.
-  web               ; the tubes
-  yaml              ; JSON, but readable
-  zig               ; C, but simpler
+agda              ; types of types of types of types...\\
+beancount         ; mind the GAAP\\
+(cc +lsp)        ; C > C++ == 1\\
+clojure           ; java with a lisp\\
+common-lisp       ; if you've seen one lisp, you've seen them all\\
+coq               ; proofs-as-programs\\
+crystal           ; ruby at the speed of c\\
+csharp            ; unity, .NET, and mono shenanigans\\
+data              ; config/data formats\\
+(dart +flutter)   ; paint ui and not much else\\
+dhall\\
+elixir            ; erlang done right\\
+elm               ; care for a cup of TEA?\\
+erlang            ; an elegant language for a more civilized age\\
+ess               ; emacs speaks statistics\\
+factor\\
+faust             ; dsp, but you get to keep your soul\\
+fsharp            ; ML stands for Microsoft's Language\\
+fstar             ; (dependent) types and (monadic) effects and Z3\\
+gdscript          ; the language you waited for\\
+(go +lsp)         ; the hipster dialect\\
+(haskell +lsp)    ; a language that's lazier than I am\\
+hy                ; readability of scheme w/ speed of python\\
+idris             ; a language you can depend on\\
+json              ; At least it ain't XML\\
+(java +lsp)       ; the poster child for carpal tunnel syndrome\\
+javascript        ; all(hope(abandon(ye(who(enter(here))))))\\
+julia             ; a better, faster MATLAB\\
+kotlin            ; a better, slicker Java(Script)\\
+latex             ; writing papers in Emacs has never been so fun\\
+lean              ; for folks with too much to prove\\
+ledger            ; be audit you can be\\
+lua               ; one-based indices? one-based indices\\
+nim               ; python + lisp at the speed of c\\
+nix               ; I hereby declare "nix geht mehr!"\\
+ocaml             ; an objective camel\\
+php               ; perl's insecure younger brother\\
+plantuml          ; diagrams for confusing people more\\
+purescript        ; javascript, but functional\\
+qt                ; the 'cutest' gui framework ever\\
+racket            ; a DSL for DSLs\\
+raku              ; the artist formerly known as perl6\\
+rest              ; Emacs as a REST client\\
+rst               ; ReST in peace\\
+(ruby +rails)     ; 1.step {|i| p "Ruby is #{i.even? ? 'love' : 'life'}"}\\
+rust              ; Fe2O3.unwrap().unwrap().unwrap().unwrap()\\
+scala             ; java, but good\\
+(scheme +guile)   ; a fully conniving family of lisps\\
+sml\\
+solidity          ; do you need a blockchain? No.\\
+swift             ; who asked for emoji variables?\\
+terra             ; Earth and Moon in alignment for performance.\\
+web               ; the tubes\\
+yaml              ; JSON, but readable\\
+zig               ; C, but simpler\\
 
 #+begin_src elisp
 :os
